--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -43,7 +43,7 @@
       background-color: $color-1;
     }
 
-    @media #{$mq-tablet} {
+    @media #{$mq-navbar} {
       display: none;
     }
 
@@ -121,10 +121,16 @@
       background-color: $color-1;
     }
 
+    @media #{$mq-tablet} {
+      left: auto;
+      right: -33%;
+      width: 33%;
+    }
+
     // This media query shouldn't be necessary but as the user could rotate
     // their device while the drawer is open, we want to make sure it's hidden
     // because otherway, they won't be able to close it without rotating back
-    @media #{$mq-tablet} {
+    @media #{$mq-navbar} {
       display: none;
     }
 
@@ -151,6 +157,10 @@
 
     &.-opened {
       transform: translateX(100%);
+
+      @media #{$mq-tablet} {
+        transform: translateX(-100%);
+      }
 
       + .mobile-menu .hamburger-menu {
         position: fixed;
@@ -179,7 +189,7 @@
 
       > .options {
         padding: 0;
-        right: unset;
+        right: auto;
         box-shadow: none;
 
         @if $theme == 2 {
@@ -229,7 +239,7 @@
       background-color: $color-3;
     }
 
-    @media #{$mq-tablet} {
+    @media #{$mq-navbar} {
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
@@ -270,6 +280,7 @@
 
       > ul {
         height: 100%;
+        min-width: 45px;
         margin:  0;
         padding: 0;
         list-style: none;
@@ -281,6 +292,11 @@
           padding: 0 25px;
           line-height: 50px;
           text-transform: uppercase;
+          white-space: nowrap;
+
+          > a {
+            padding: 0;
+          }
 
           &.-active {
             @if $theme == 2 {
@@ -453,7 +469,7 @@
         }
       }
 
-      @media #{$mq-tablet} {
+      @media #{$mq-navbar} {
         display: block;
       }
 
