--- a/app/views/site_page/_site_map.html.erb
+++ b/app/views/site_page/_site_map.html.erb
@@ -1,9 +1,3 @@
 <p>Here are some links you might find helpful:</p>
 
-<ul class="sitemap">
-  <li><a href="<%= @menu_tree.keys.first.url %>"><%= @menu_root.site.name %></a></li>
-  <% @menu_root.children.each do |page| %>
-    <% next unless (page.show_on_menu && page.visible?) %>
-    <li><%= page_link page %></li>
-  <% end %>
-</ul>
+<%= nested_page_links @menu_root %>
