--- a/app/views/management/dataset_steps/metadata.html.erb
+++ b/app/views/management/dataset_steps/metadata.html.erb
@@ -26,6 +26,10 @@
           <%= text_field_tag 'dataset[metadata][description]', f.object.metadata[:description] %>
         </div>
         <div>
+          <%= f.label :citation, for: 'dataset_metadata_citation' %>
+          <%= text_field_tag 'dataset[metadata][citation]', f.object.metadata[:citation] %>
+        </div>
+        <div>
           <%= f.label :source, for: 'dataset_metadata_source' %>
           <%= text_field_tag 'dataset[metadata][source]', f.object.metadata[:source] %>
         </div>
